# tinyML-pico

./: .gitignore  ARM_Filters.py  Audio.ipynb  CMakeLists.txt  NVS_train.py  Out1.out  Pico_Test.code-workspace  README.md  Readme.md  Wav.cpp  Write_data.py  camera.c  camera.pio  checkNSV.py  code.py  code_yuv.py  define.py  machine_i2s.c  main.cpp  main.py  mem_usage.py  micro_speech.py  ml_audio_classifier_for_pico.ipynb  morphology_NSV.py  ov7670.c  pc_viewer.py  pc_viewer_yuv.py  preprocess.py  spec.py  split.py  yes_no.py
CircuitPython 8.x/lib/adafruit_seesaw/: pwmout.mpy:Zone.Identifier
HexFile2BinaryFile/: HexDumpToWav  HexDumpToWav.c  Readme.md
Norm_train/: Norm_train.py  Out1.out  bxb.py
Norm_train/constantQ/: timeseries.py  utilityaccess.py
Norm_train/constantQ/spectral/: _scipy.py  _ui.py
Origin_train/: bxb.py  origin_train.py
Pico_TinyML/: CMakeLists.txt
Pico_TinyML/src/: Wav.cpp  machine_i2s.c  main.c  usb_microphone.c
Result/: audio.txt  audio1.txt  audio2.txt  record.txt
Results_bxb/: 2nd.out  3rd.out
Spectrogram/: define.py  main.py  preprocess.py
example/: CMakeLists.txt  main.c
i2s_mic/: i2s_microphone.cpp  i2s_microphone.h
lib/i2s_mic_for_pico/: machine_i2s.c
micropython/build-PICO/: firmware.uf2
model_src/: .gitignore  requirements.txt
pico_src/: CMakeLists.txt  README.md  camera.c  camera.pio
pico_src/example/: main.cpp
pico_src/include/camera/: camera.h
src/: CMakeLists.txt  main.cpp
